# cppbackend

./: .gitignore
sprint1/problems/async_server/solution/src/: http_server.cpp  main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  ingredients.h
sprint1/problems/final_task/solution/src/: http_server.h  json_loader.cpp  json_loader.h  main.cpp  request_handler.cpp
sprint1/problems/map_json/solution/src/: request_handler.h
sprint1/problems/radio/solution/src/: main.cpp
sprint1/problems/restaurant_multi_threaded/solution/src/: main.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/seabattle/solution/src/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint1/samples/tcp-udp/: CMakeLists.txt
sprint2/examples/boost_log/: main.cpp
sprint2/examples/program_options/: CMakeLists.txt
sprint2/examples/program_options/src/: merge.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: application.h  http_server.cpp  json_logger.cpp  json_parser.cpp  json_parser.h  main.cpp  model.h  players.h  request_handler.cpp  request_handler.h  ticker.h
sprint2/problems/game_state/solution/src/: http_server.cpp  main.cpp  model.h  players.h  request_handler.h
sprint2/problems/join_game/solution/src/: json_logger.cpp  main.cpp  model.h  request_handler.cpp  request_handler.h
sprint2/problems/logger/solution/: my_logger.h
sprint2/problems/move_players/solution/: CMakeLists.txt
sprint2/problems/move_players/solution/src/: boost_json.cpp  json_loader.h  model.h  players.h  request_handler.h
sprint2/problems/server_logging/solution/: Dockerfile  run_server
sprint2/problems/server_logging/solution/src/: http_server.h  json_loader.cpp  json_logger.cpp  main.cpp  request_handler.h
sprint2/problems/static_content/solution/: CMakeLists.txt
sprint2/problems/static_content/solution/src/: main.cpp  request_handler.h
sprint2/problems/time_control/solution/src/: json_loader.cpp  model.h  players.h  request_handler.cpp  request_handler.h
sprint3/problems/find_return/solution/src/: application.h  collision_detector.h  json_parser.cpp  json_parser.h  model.h  players.h
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather-tests/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: model.h
sprint3/problems/gen_objects/solution/tests/: model-tests.cpp
sprint3/problems/htmldecode/solution/src/: htmldecode.cpp
sprint3/problems/htmldecode/solution/tests/: tests.cpp
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: application.cpp  application.h  json_logger.cpp  json_logger.h  json_parser.h  main.cpp  model.cpp  model.h  players.cpp  players.h  request_handler.h  ticker.h
sprint3/problems/scores/solution/tests/: model-tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: application.h  http_server.h  json_parser.h
sprint3/problems/tv/solution/src/: controller.h  tv.h
sprint3/problems/urldecode/solution/: CMakeLists.txt
sprint3/problems/urldecode/solution/src/: main.cpp  urldecode.cpp  urldecode.h
sprint3/problems/urldecode/solution/tests/: tests.cpp
sprint3/problems/urlencode/solution/: CMakeLists.txt  conanfile.txt
sprint3/problems/urlencode/solution/src/: urlencode.cpp
sprint3/problems/urlencode/solution/tests/: tests.cpp
sprint4/problems/bookypedia-1/solution/src/: bookypedia.cpp  main.cpp
sprint4/problems/bookypedia-1/solution/src/app/: use_cases.h  use_cases_impl.h
sprint4/problems/bookypedia-1/solution/src/domain/: book.h
sprint4/problems/bookypedia-1/solution/src/menu/: menu.h
sprint4/problems/bookypedia-1/solution/src/postgres/: postgres.cpp  postgres.h
sprint4/problems/bookypedia-1/solution/src/ui/: view.cpp
sprint4/problems/bookypedia-2/solution/src/app/: use_cases_impl.cpp
sprint4/problems/bookypedia-2/solution/src/postgres/: postgres.cpp
sprint4/problems/bookypedia-2/solution/src/ui/: view.h
sprint4/problems/bookypedia-2/solution/tests/: use_case_tests.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt  conanfile.txt
sprint4/problems/db_of_books/solution/src/: main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt
sprint4/problems/leave_game/solution/src/: application.cpp  application.h  collision_detector.cpp  collision_detector.h  database_controller.h  geom.h  json_parser.h  loot_generator.cpp  loot_generator.h  main.cpp  model.cpp  model.h  players.cpp  players.h  request_handler.cpp  request_handler.h  server_state_saver.h  ticker.h
sprint4/problems/leave_game/solution/tests/: loot_generator_tests.cpp  model-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/state_serialization/solution/src/: app_state_saver.h  application.cpp  application.h  main.cpp  model.h  players.h  request_handler.h  server_state_saver.cpp  server_state_saver.h
sprint4/problems/state_serialization/solution/tests/: collision-detector-tests.cpp  model-tests.cpp
